--- a/npo-ptnk.ru-v2/kompaniya/index.html
+++ b/npo-ptnk.ru-v2/kompaniya/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
-  <body>
+  <body class="page-about">
     <a class="skip-link" href="#main">Перейти к содержанию</a>
     <header class="site-header">
       <div class="container">
@@ -37,92 +37,81 @@
     <main id="main">
       <div class="container">
         <section class="hero">
-          <div class="hero-inner">
+          <div class="hero-inner hero-inner--single">
             <div>
-              <div class="kicker">О компании</div>
               <h1>НПО ПТНК</h1>
               <p>Собственное производство — от разработки документации до изготовления и монтажа изделий «под ключ».</p>
-              <div class="hero-actions">
-                <a class="btn btn-primary" href="../produktsiya/index.html">Продукция</a>
-                <a class="btn btn-secondary" href="../kontakty/index.html">Контакты</a>
+            </div>
+          </div>
+        </section>
+
+        <section class="section about-intro">
+          <div class="section-head">
+            <div>
+              <h2 class="section-title">О компании</h2>
+              <p class="section-subtitle">Полный цикл: проектирование, производство и монтаж.</p>
+            </div>
+          </div>
+          <div class="grid grid-2 about-intro-grid">
+            <div class="card about-media">
+              <div class="card-media"><img src="../images/foto3.jpg" alt="О компании НПО ПТНК" loading="lazy" /></div>
+            </div>
+            <div class="about-content">
+              <div class="prose">
+                <p>Благодаря полностью собственному производству — от разработки и конструкторской документации до изготовления и установки «под ключ» — наши сооружения сохраняют высокое качество и конкурентную стоимость.</p>
+                <p>Производство оснащено современными технологиями: полуавтоматическая сварка в защитной среде, сварка материалов для тентовой архитектуры, автоматизированный контроль изделий.</p>
+                <p>Внедрены сквозной учет и автоматизация производственных и бизнес‑процессов. Команда обеспечивает информационную поддержку по всей линейке продукции.</p>
+              </div>
+              <div class="about-highlights" role="list">
+                <div class="about-highlight" role="listitem">
+                  <h3>Собственный цикл</h3>
+                  <p>Контроль сроков и качества на каждом этапе.</p>
+                </div>
+                <div class="about-highlight" role="listitem">
+                  <h3>Серийность</h3>
+                  <p>Отработанные технологии и повторяемый результат.</p>
+                </div>
+                <div class="about-highlight" role="listitem">
+                  <h3>Монтаж «под ключ»</h3>
+                  <p>Проектирование, производство и сборка силами одной команды.</p>
+                </div>
+              </div>
+              <div class="about-stats" role="list">
+                <div class="about-stat" role="listitem"><strong>30+ лет</strong><span>ресурс конструкции</span></div>
+                <div class="about-stat" role="listitem"><strong>2–3 месяца</strong><span>срок монтажа</span></div>
+                <div class="about-stat" role="listitem"><strong>до 10 лет</strong><span>гарантия материала</span></div>
               </div>
             </div>
-            <aside class="hero-card">
-              <h3>Коротко</h3>
-              <ul>
-                <li>Невысокая цена благодаря собственному циклу</li>
-                <li>Автоматизация производственных процессов</li>
-                <li>Информационная поддержка по всей линейке</li>
-              </ul>
-            </aside>
           </div>
         </section>
 
-        <section class="section grid grid-2">
-          <div class="prose">
-            <p>Благодаря полностью собственному производству, начиная от разработки дизайна, рабочей конструкторской документации, собственному производству ткани для тентовой архитектуры и заканчивая изготовлением и установкой изделия «под ключ», наши сооружения обладают невысокой ценой.</p>
-            <p>Производство в компании оснащено самыми передовыми технологиями: полуавтоматическая сварка в защитной среде, полуавтоматическая сварка материалов для тентовой архитектуры, автоматизированный контроль изделий.</p>
-            <p>На предприятии внедрена система сквозного учета и автоматизации всех производственных и бизнес‑процессов.</p>
-            <p>Наши специалисты обеспечивают информационной поддержкой по всему спектру производимой продукции.</p>
-          </div>
-          <div class="grid" style="gap:12px">
-            <div class="card"><div class="card-media"><img src="../images/okomp1.jpg" alt="Производство НПО ПТНК" loading="lazy" /></div></div>
-            <div class="card"><div class="card-media"><img src="../images/okomp2.jpg" alt="Производство и монтаж" loading="lazy" /></div></div>
-          </div>
-        </section>
-
-        <section class="section">
+        <section class="section about-energy">
           <div class="section-head">
             <div>
               <h2 class="section-title">Энергоэффективность и долговечность</h2>
               <p class="section-subtitle">Решения рассчитаны на долговременную всесезонную эксплуатацию.</p>
             </div>
           </div>
-          <div class="prose">
-            <p>Научно‑Производственным Объединением ПТНК разработан быстровозводимый сборно‑разборный комплекс для ледовой арены с обеспечением заданных климатических параметров и снижением энергозатрат при эксплуатации.</p>
-            <p>Конструкция относится к кластеру временных сооружений, что упрощает согласование ее применения, но рассчитана на долговременную (более 30 лет) всесезонную эксплуатацию.</p>
-            <ul>
-              <li>Стоимость в 2–3 раза ниже, чем у капитальных строений</li>
-              <li>Возможность оформления статуса временного (мобильного) сооружения</li>
-              <li>Не требуется постоянного расхода электроэнергии, как у воздухоопорных конструкций</li>
-              <li>Не требуется очистка внешней поверхности от снега</li>
-              <li>Улучшенные термоизоляционные свойства снижают эксплуатационные затраты на 20–30%</li>
-              <li>Установка в любое время года</li>
-            </ul>
+          <div class="grid grid-2 about-energy-grid">
+            <div class="prose">
+              <p>НПО ПТНК разработало быстровозводимый сборно‑разборный комплекс для ледовой арены с поддержанием климатических параметров и снижением энергозатрат при эксплуатации.</p>
+              <p>Конструкция относится к кластеру временных сооружений, что упрощает согласование применения, при этом рассчитана на долговременную (более 30 лет) всесезонную эксплуатацию.</p>
+              <div class="callout">
+                <h3>Инновация конструкции</h3>
+                <p>Полумонококовая схема на высокопрочных болтовых соединениях и герметичная эластичная инженерная поверхность заводского изготовления помогают снизить теплопотери и ускорить монтаж.</p>
+              </div>
+            </div>
+            <div class="checklist" role="list">
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Стоимость в 2–3 раза ниже, чем у капитальных строений</span></div>
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Оформление статуса временного (мобильного) сооружения</span></div>
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Не требуется постоянный расход электроэнергии (как у воздухоопорных конструкций)</span></div>
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Не требуется очистка внешней поверхности от снега</span></div>
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Каркас не скрыт в межтентовом пространстве — удобнее обслуживать инженерные системы</span></div>
+              <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Установка в любое время года</span></div>
+            </div>
           </div>
         </section>
 
-        <section class="section">
-          <div class="section-head">
-            <div>
-              <h2 class="section-title">Многофункциональность</h2>
-              <p class="section-subtitle">Продукция поставляется для силовых структур и гражданских нужд.</p>
-            </div>
-          </div>
-          <div class="grid grid-2">
-            <div class="prose">
-              <ul>
-                <li>Теннисные корты</li>
-                <li>Катки</li>
-                <li>Бассейны</li>
-                <li>Выставочные павильоны</li>
-                <li>Спортзалы</li>
-                <li>Зернохранилища</li>
-                <li>Автостоянки (парковки)</li>
-              </ul>
-            </div>
-            <div class="prose">
-              <ul>
-                <li>Комплексы длительного хранения</li>
-                <li>Пункты технического обслуживания и ремонта</li>
-                <li>Мойки (с системами очистки воды замкнутого цикла)</li>
-                <li>Авиа ангары</li>
-                <li>Эллинги для морских и речных судов</li>
-                <li>Сельскохозяйственные и животноводческие комплексы</li>
-              </ul>
-            </div>
-          </div>
-        </section>
       </div>
     </main>
 
