--- a/npo-ptnk.ru-v2/kontakty/index.html
+++ b/npo-ptnk.ru-v2/kontakty/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
-  <body>
+  <body class="page-contacts">
     <a class="skip-link" href="#main">Перейти к содержанию</a>
     <header class="site-header">
       <div class="container">
@@ -28,7 +28,6 @@
               <a class="pill" href="tel:+74959782917"><strong>+7 (495) 978‑29‑17</strong></a>
               <a class="pill" href="mailto:ptktent@mail.ru">ptktent@mail.ru</a>
             </div>
-            <a class="btn btn-primary" href="index.html">Оставить запрос</a>
           </div>
         </div>
       </div>
@@ -39,26 +38,13 @@
         <section class="hero">
           <div class="hero-inner">
             <div>
-              <div class="kicker">Контакты</div>
               <h1>Связаться с нами</h1>
-              <p>ООО «НПО ПРОМТЕХНАКОМПЛЕКТ»</p>
+              <p>+7 (495) 978‑29‑17 · ptktent@mail.ru</p>
               <div class="hero-actions">
                 <a class="btn btn-primary" href="tel:+74959782917">Позвонить</a>
                 <a class="btn btn-secondary" href="mailto:ptktent@mail.ru">Написать</a>
               </div>
             </div>
-            <aside class="hero-card">
-              <h3>Реквизиты</h3>
-              <ul>
-                <li><strong>Юр. лицо:</strong> ООО «НПО ПРОМТЕХНАКОМПЛЕКТ»</li>
-                <li><strong>ИНН:</strong> 5020080229</li>
-                <li><strong>КПП:</strong> 50270100</li>
-                <li><strong>ОГРН:</strong> 1165020050315</li>
-                <li><strong>Адрес:</strong> 141644, Московская область, г.о. Клин, д. Слобода, д. 200, к. 1, оф. 202</li>
-                <li><strong>Телефон:</strong> +7 (495) 978‑29‑17</li>
-                <li><strong>Email:</strong> ptktent@mail.ru</li>
-              </ul>
-            </aside>
           </div>
         </section>
 
