--- a/npo-ptnk.ru-v2/produktsiya/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
-  <body>
+  <body class="page-products">
     <a class="skip-link" href="#main">Перейти к содержанию</a>
     <header class="site-header">
       <div class="container">
@@ -37,19 +37,18 @@
     <main id="main">
       <div class="container">
         <section class="hero">
-          <div class="hero-inner">
+          <div class="hero-inner hero-inner--single">
             <div>
-              <div class="kicker">Продукция</div>
               <h1>Наши решения</h1>
               <p>Быстровозводимые сборно‑разборные тенто‑каркасные комплексы для спорта, производства и инфраструктуры.</p>
             </div>
-            <aside class="hero-card">
-              <h3>Навигация</h3>
-              <ul>
-                <li>Спортивные сооружения</li>
-                <li>Сооружения производственного назначения</li>
-              </ul>
-            </aside>
+          </div>
+        </section>
+
+        <section class="section empty-state" aria-label="Раздел в разработке">
+          <div class="callout empty-state-card">
+            <h2>Товары появятся позже</h2>
+            <p>Сейчас раздел в разработке.</p>
           </div>
         </section>
 
@@ -66,7 +65,7 @@
               <div class="card-body">
                 <h3>Ледовая арена круглогодичного использования</h3>
                 <p>Быстровозводимый утепленный сборно‑разборный комплекс.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="ledovaya-arena-kruglogodichnogo-ispolzovaniya/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
@@ -74,7 +73,7 @@
               <div class="card-body">
                 <h3>Сезонные ледовые площадки</h3>
                 <p>Быстровозводимый сборно‑разборный комплекс (покрытие) для сезонных ледовых площадок.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="sezonnye-ledovye-ploshchadki/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
@@ -82,7 +81,7 @@
               <div class="card-body">
                 <h3>Спортзалы и спортивные площадки</h3>
                 <p>Быстровозводимые сборно‑разборные покрытия для спортивных площадок.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="sportzaly-i-sportivnye-ploshchadki/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
           </div>
@@ -101,7 +100,7 @@
               <div class="card-body">
                 <h3>КТОР АТ</h3>
                 <p>Комплекс технического обслуживания, хранения и ремонта авиационной техники.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="ktor-at/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
@@ -109,7 +108,7 @@
               <div class="card-body">
                 <h3>Комплексы для хранения техники</h3>
                 <p>Утепленные и неутепленные тенто‑каркасные комплексы для хранения и обслуживания.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="avtomobilnyy-angar/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
@@ -117,7 +116,7 @@
               <div class="card-body">
                 <h3>Быстровозводимые комплексы различного назначения</h3>
                 <p>Модульный принцип построения под широкий спектр задач.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="bystrovozvodimye-kompleksy/index.html">Подробнее</a></p>
+                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
               </div>
             </article>
           </div>
