--- a/npo-ptnk.ru-v2/index.html
+++ b/npo-ptnk.ru-v2/index.html
@@ -39,25 +39,33 @@
 
     <main id="main">
       <div class="container">
-        <section class="hero">
-          <div class="hero-inner">
-            <div>
-              <div class="kicker">НПО «Промтехнакомплект»</div>
+        <section class="hero hero-home">
+          <div class="hero-inner hero-inner--single">
+            <div class="hero-home-copy">
               <h1>Производство быстровозводимых, уникальных, всепогодных тенто‑мобильных комплексов</h1>
               <p>Проектирование, производство и монтаж сооружений «под ключ».</p>
               <div class="hero-actions">
                 <a class="btn btn-primary" href="produktsiya/index.html">Смотреть продукцию</a>
               </div>
             </div>
-            <aside class="hero-card">
-              <h3>Преимущества</h3>
-              <ul>
-                <li>Собственное производство</li>
-                <li>Стоимость в 2–3 раза ниже капитальных строений</li>
-                <li>Снижение эксплуатационных затрат на 20–30%</li>
-                <li>Всесезонный монтаж</li>
-              </ul>
-            </aside>
+          </div>
+        </section>
+
+        <section class="section advantages">
+          <h2 class="section-title section-title--accent section-title--center">Преимущества наших конструкций</h2>
+          <div class="advantages-panel">
+            <div class="advantages-grid" role="list">
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Собственное производство</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Стоимость в 2–3 раза ниже, чем у капитальных строений</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Возможность оформления статуса временного (мобильного) сооружения, что исключает обложение налогом на недвижимость</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Долговечность капитального сооружения</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Не требует постоянного расхода электроэнергии, как воздухоопорные конструкции</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Не требует очистки поверхности от снега</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Каркас не скрыт в межтентовом пространстве</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Улучшенные термоизоляционные свойства снижают эксплуатационные затраты на 20–30%</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Установка в любое время года</span></div>
+              <div class="adv-item" role="listitem"><span class="adv-icon" aria-hidden="true"></span><span>Многослойный тентовый «пирог» заводского изготовления</span></div>
+            </div>
           </div>
         </section>
 
@@ -69,6 +77,7 @@
             </div>
             <a class="btn btn-secondary" href="zashchita-ot-bpla-i-dronov/index.html">Узнать больше</a>
           </div>
+          <p class="video-caption">Видео‑презентация: нажмите для воспроизведения</p>
           <div class="video" aria-label="Видео">
             <iframe src="https://rutube.ru/play/embed/9185568e815965e5b681affc023352f6/" allow="clipboard-write; autoplay; fullscreen" allowfullscreen></iframe>
           </div>
@@ -122,49 +131,6 @@
           </div>
         </section>
 
-        <section class="section">
-          <div class="section-head">
-            <div>
-              <h2 class="section-title">Преимущества наших конструкций</h2>
-              <p class="section-subtitle">Ключевые свойства и экономические эффекты.</p>
-            </div>
-          </div>
-          <div class="prose">
-            <ul>
-              <li>Собственное производство</li>
-              <li>Стоимость в 2–3 раза ниже, чем у капитальных строений</li>
-              <li>Возможность оформления статуса временного (мобильного) сооружения, что исключает обложение налогом на недвижимость</li>
-              <li>Долговечность капитального сооружения</li>
-              <li>Не требует постоянного расхода электроэнергии, как воздухоопорные конструкции</li>
-              <li>Не требует очистки поверхности от снега</li>
-              <li>Каркас не скрыт в межтентовом пространстве</li>
-              <li>Улучшенные термоизоляционные свойства снижают эксплуатационные затраты на 20–30%</li>
-              <li>Установка в любое время года</li>
-              <li>Многослойный тентовый «пирог» заводского изготовления</li>
-            </ul>
-          </div>
-        </section>
-
-        <section class="section">
-          <div class="section-head">
-            <div>
-              <h2 class="section-title">О компании «НПО ПТНК»</h2>
-              <p class="section-subtitle">Собственное производство — от документации до монтажа.</p>
-            </div>
-            <a class="btn btn-secondary" href="kompaniya/index.html">Подробнее</a>
-          </div>
-          <div class="grid grid-2">
-            <div class="card">
-              <div class="card-media"><img src="images/foto3.jpg" alt="О компании НПО ПТНК" loading="lazy" /></div>
-            </div>
-            <div class="prose">
-              <p>Благодаря полностью собственному производству, начиная от разработки дизайна, рабочей конструкторской документации, собственному производству ткани для тентовой архитектуры и заканчивая изготовлением и установкой изделия «под ключ», наши сооружения обладают невысокой ценой.</p>
-              <p>Производство в компании оснащено самыми передовыми технологиями: полуавтоматическая сварка в защитной среде, полуавтоматическая сварка материалов для тентовой архитектуры, автоматизированный контроль изделий.</p>
-              <p>На предприятии внедрена система сквозного учета и автоматизации всех производственных и бизнес‑процессов.</p>
-              <p>Наши специалисты обеспечивают информационной поддержкой по всему спектру производимой продукции.</p>
-            </div>
-          </div>
-        </section>
       </div>
     </main>
 
