--- a/npo-ptnk.ru-v2/index.html
+++ b/npo-ptnk.ru-v2/index.html
@@ -42,10 +42,21 @@
         <section class="hero hero-home">
           <div class="hero-inner hero-inner--single">
             <div class="hero-home-copy">
-              <h1>Производство быстровозводимых, уникальных, всепогодных тенто‑мобильных комплексов</h1>
-              <p>Проектирование, производство и монтаж сооружений «под ключ».</p>
-              <div class="hero-actions">
-                <a class="btn btn-primary" href="produktsiya/index.html">Смотреть продукцию</a>
+              <p class="hero-home-kicker">Проектирование • Производство • Монтаж</p>
+              <h1>
+                <span class="hero-home-line">Производство</span>
+                <span class="hero-home-line hero-home-emphasis">быстровозводимых</span>
+                <span class="hero-home-line">всепогодных тенто‑мобильных комплексов</span>
+              </h1>
+              <div class="hero-home-aside">
+                <p>Проектирование, производство и монтаж сооружений «под ключ» для промышленной и гражданской инфраструктуры.</p>
+                <div class="hero-home-points" role="list">
+                  <div class="hero-home-point" role="listitem"><strong>Под ключ</strong><span>Одна команда ведёт проект от документации до запуска.</span></div>
+                  <div class="hero-home-point" role="listitem"><strong>Всесезонно</strong><span>Решения рассчитаны на длительную эксплуатацию.</span></div>
+                </div>
+                <div class="hero-actions">
+                  <a class="btn btn-primary" href="produktsiya/index.html">Смотреть продукцию</a>
+                </div>
               </div>
             </div>
           </div>
