--- a/npo-ptnk.ru-v2/kompaniya/index.html
+++ b/npo-ptnk.ru-v2/kompaniya/index.html
@@ -36,11 +36,13 @@
 
     <main id="main">
       <div class="container">
-        <section class="hero">
+        <section class="hero hero-about">
           <div class="hero-inner hero-inner--single">
-            <div>
+            <div class="hero-about-copy">
+              <p class="hero-about-kicker">О компании</p>
               <h1>НПО ПТНК</h1>
-              <p>Собственное производство — от разработки документации до изготовления и монтажа изделий «под ключ».</p>
+              <p class="hero-about-lead">Проектируем, производим и монтируем тентово‑мобильные комплексы «под ключ».</p>
+              <p class="hero-about-detail">Собственное производство — от конструкторской документации до изготовления изделий и монтажа на объекте.</p>
             </div>
           </div>
         </section>
@@ -48,8 +50,8 @@
         <section class="section about-intro">
           <div class="section-head">
             <div>
-              <h2 class="section-title">О компании</h2>
-              <p class="section-subtitle">Полный цикл: проектирование, производство и монтаж.</p>
+              <h2 class="section-title">Почему НПО ПТНК</h2>
+              <p class="section-subtitle">Одна команда ведёт проект от документации до монтажа.</p>
             </div>
           </div>
           <div class="grid grid-2 about-intro-grid">
@@ -93,13 +95,15 @@
             </div>
           </div>
           <div class="grid grid-2 about-energy-grid">
-            <div class="prose">
-              <p>НПО ПТНК разработало быстровозводимый сборно‑разборный комплекс для ледовой арены с поддержанием климатических параметров и снижением энергозатрат при эксплуатации.</p>
-              <p>Конструкция относится к кластеру временных сооружений, что упрощает согласование применения, при этом рассчитана на долговременную (более 30 лет) всесезонную эксплуатацию.</p>
-              <div class="callout">
+            <div class="about-energy-copy">
+              <div class="prose">
+                <p>НПО ПТНК разработало быстровозводимый сборно‑разборный комплекс для ледовой арены с поддержанием климатических параметров и снижением энергозатрат при эксплуатации.</p>
+                <p>Конструкция относится к кластеру временных сооружений, что упрощает согласование применения, при этом рассчитана на долговременную (более 30 лет) всесезонную эксплуатацию.</p>
+              </div>
+              <article class="about-innovation">
                 <h3>Инновация конструкции</h3>
                 <p>Полумонококовая схема на высокопрочных болтовых соединениях и герметичная эластичная инженерная поверхность заводского изготовления помогают снизить теплопотери и ускорить монтаж.</p>
-              </div>
+              </article>
             </div>
             <div class="checklist" role="list">
               <div class="check-item" role="listitem"><span class="check-icon" aria-hidden="true"></span><span>Стоимость в 2–3 раза ниже, чем у капитальных строений</span></div>
